# FEUP

./: README.md
1st_Year/1st_Semestre/Bibliography/: Info.txt
1st_Year/1st_Semestre/Mnum/: Aurea.py  Bissecao.py  Cubatura.py  EDO-1ªordem.py  Euler.py  Falsa_Posicao.py  Gauss-Jacobi.py  Gauss-Seidel.py  Gauss.py  Gauss2.py  Gradiente.py  Levenberg-Marquardt.py  Minimo.py  Newton.py  Pesquisa_Minimo.py  Picard-Peano.py  Quadrica.py  Runga-Kutta-4.py  Runga-Kutta.py  Trapezios.py  newton-sisteam-ex-do-livro.py  sistema-picard-peano.py
1st_Year/2nd_Semestre/MEST/: submission2.csv
1st_Year/2nd_Semestre/PROG/: Projeto_2.sln - Atalho.lnk
2nd_Year/1st_Semestre/AEDA/Projeto/: CMakeLists.txt
2nd_Year/1st_Semestre/MNUM/: Bissecao.py  Falsa_Posicao.py  Newton.py  Newton_Sistema.py  Picard-Peano.py  Picard-Peano_Sistema.py
2nd_Year/2nd_Semestre/BDAD/: BDAD.md  BDAD_Mongo.md  DúvidasTesteFormativo.md  Exame2012_2013.md  Exame2014_2015.md  Exame2015_2016.md  Oficina.sql  ProjInterrogacoes.md  README.MD  RelationalAlgebra.md  Script.sql  Triggers.md  Triggers.sql  photos.sql  poviardOficina.sql  run.sql
2nd_Year/2nd_Semestre/CAL/: CalPratica1.txt  CalPratica2.md  Exame2015_2016.md  Help.md  README.md
2nd_Year/2nd_Semestre/CGRA/: Aula2.md  Aula3.md  Aula4.md  Aula5.md  Readme.md
2nd_Year/2nd_Semestre/LPOO/: Readme.md
2nd_Year/2nd_Semestre/SOPE/: Definições_Exame.md  Exame2010_2011.md  Exame2012_2013.md  Exame2014_2015.md  (+4 more)
3d_Year/1st_semestre/: Info.md
3rd_Year/ESOF/: Trabalho.md
3rd_Year/PLOG/: Exercício2a.pl  Exercício9.pl
3rd_Year/PPIN/: Aula1-2.md
(+999 files in other folders)
